# psqlxx

./: .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  configure  project.config
.github/workflows/: cmake.yml
cmake/: test_defines.cmake  utils.cmake
doc/: todo.md
doc/demos/: demos.md
packaging/: CMakeLists.txt
postgres_client/: CMakeLists.txt  args.cpp  args.hpp  args.test.cpp  cli.cpp  cli.hpp  main.cpp  sql_session.cpp  sql_session.hpp  version.cpp.in  version.hpp
psqlxx/: CMakeLists.txt  args.cpp  args.hpp  args.test.cpp  cli.cpp  cli.hpp  command.cpp  command.hpp  command.test.cpp  db.cpp  db.hpp  db.test.cpp  exception.hpp  formatter.cpp  formatter.hpp  keyword.hpp  main.cpp  real_db.test.cpp  sql_session.cpp  sql_session.hpp  string_utils.hpp  string_utils.test.cpp  test_utils.cpp.in  test_utils.hpp  version.cpp.in  version.hpp
scripts/: CMakeLists.txt  bootstrap.sh  db_config.sh  dependencies.sh  generate_keyword_file.sh  setup.sh
tests/: CMakeLists.txt
tests/db/: CMakeLists.txt  sample_queries.sql  sample_write.sql  test_db_cleanup.sh  test_db_defines.py.in  test_db_defines.sh  test_db_defines.sh.in  test_db_setup.sh  test_psql_diff.py
